# competitor_check

./: Dockerfile  Makefile  README.md  app.py  app_inference_spec.py  example_inference.json  inferless.yaml  input_schema.py  pyproject.toml  serve  testremote.py
.github/workflows/: ecr_sagemaker_publish.yml
benchmarks/: data.csv  generate_synth_data.ipynb  test_latency.ipynb
test/: test_validator.py
tests/: test_prefilter.py  test_validator.py  unit_tests.py
validator/: CompetitorCheck.py  __init__.py  main.py  post-install.py  test.ipynb  test.py
